contrast issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 body {
   background-color: rgba(0, 0, 0);
-  font-family: "Roboto", sans-serif;
+  font-family: "Lusitana", sans-serif;
   min-width: 100%;
   color: white;
   margin: 0;
   padding: 0;
   min-height: 100%;
+}
+
+h2 {
+  font-family: "Raleway", sans-serif;
 }
 
 .content {
@@ -164,6 +168,7 @@ a:hover,
 .text {
   align-items: center;
   margin: 10px 0;
+  font-family: "Open Sans", sans-serif;
   font-size: 100px;
   color: white;
 }
@@ -375,6 +380,7 @@ a {
 .projectTitle {
   justify-content: center;
   align-items: center;
+  font-family: "Raleway", sans-serif;
   font-size: 90px;
   color: white;
 }
@@ -393,10 +399,12 @@ div {
 }
 .aboutmecontent {
   border: solid;
-  border-color: white;
+  color: rgb(210, 208, 208);
+  border-color: rgb(167, 165, 165);
   padding: 2.5rem 4rem 2.5rem 4rem;
   max-width: 40vw;
   margin-right: 2.5rem;
+  text-align: justify;
 }
 .aboutmephoto {
   display: flex;
@@ -407,7 +415,7 @@ div {
   height: 55vh;
   border: solid;
   padding: 3rem;
-  border-color: white;
+  border-color: rgb(167, 165, 165);
 }
 
 .contentborder {
@@ -417,11 +425,12 @@ div {
 }
 
 .aboutmep {
-  font-size: 12px;
+  color: rgb(167, 165, 165);
 }
 
 .name {
   margin: 10px 0;
   font-size: 70px;
-  color: white;
+  color: rgb(210, 208, 208);
+  font-family: "Raleway", sans-serif;
 }
